test/ppx_expect/cases/let_2.ml
#use "topfind";;
#require "lwt";;
#require "lwt.ppx";;

let _ =
  let%lwt () = Lwt.return () in
  ();;
